# python-project-lvl2

./: README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: linter-and-test.yml
gendiff/: __init__.py  diff_engine.py  formatter.py  parser.py
gendiff/formatter/: json_formatter.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: 1_1.json  1_5.txt  3_5.txt
